--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   const db = firebase.database();
 
   /************ Kategorien & Fragen ************/
-  const CATEGORY_LIST = ["Fernsehen","Musik","Sport","Politik","Games","Geografie"];
+  const CATEGORY_LIST = ["Geografie", "Wissenschaft", "Geschichte", "Kultur & Kunst", "Sport", "Technik & Digitalisierung"  ];
   const QUESTION_POOL = [
  // --- GEOGRAFIE (25) ---
 { question: "Welches Land hat die längste Küstenlinie der Welt?", answers: ["USA","Kanada","Australien","Indonesien"], correct: 1, category: "Geografie" },
@@ -1360,6 +1360,7 @@
   </script>
 </body>
 </html>
+
 
 
 
