--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     .btn{ display:inline-flex; align-items:center; justify-content:center; gap:8px; font-weight:800; padding:10px 14px; cursor:pointer; border:none; border-radius:10px; background:rgba(255,255,255,0.03); color:var(--tile); }
     .btn-host{ background:var(--rtl-orange); color:white; }
     .btn-join{ background:var(--rtl-purple); color:white; }
-    .btn-show-results{ background:var(--rtl-green); color:white; }
+   .btn-show-results{
+  background: rgba(255,255,255,0.02);
+  border: 1px solid rgba(255,255,255,0.04);
+  color: var(--tile);
+}
     .card{ padding:16px; background: rgba(255,255,255,0.01); border:1px solid rgba(255,255,255,0.03); border-radius:12px; }
     .host-screen{ display:flex; gap:20px; padding:24px; height:100vh; align-items:stretch; }
     .host-main{ flex:2; padding:28px; display:flex; flex-direction:column; gap:18px; min-height:0; background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border:1px solid rgba(255,255,255,0.03); border-radius:12px; }
@@ -1615,6 +1619,7 @@
   </script>
 </body>
 </html>
+
 
 
 
