--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
               </div>
 
               <div style={{marginTop:18}}>
-                <h3 style={{fontWeight:900, color:'var(--rtl-orange)'}}>📋 Aktionen & Effekte Log</h3>
+                <h3 style={{fontWeight:900, color:'var(--rtl-orange)'}}>Aktionen & Effekte Log</h3>
                 <div style={{marginTop:8, maxHeight:400, overflow:'auto'}}>
                   {(() => {
                     const actionLogRef = game.meta?.actions?.[qIndex] || [];
@@ -1619,6 +1619,7 @@
   </script>
 </body>
 </html>
+
 
 
 
